--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <style>
 /* ===== Test Your Luck button (image that scrolls with page) ===== */
 .luck-btn-wrap{
-  width:max(180px, 42vw);
-  max-width:420px;
-  margin:18px auto 8px;            /* centers in your page flow */
+  width:max(100px, 31vw);
+  max-width:220px;
+  margin:18px auto 8px 0;            /* centers in your page flow */
   display:flex; flex-direction:column; align-items:center;
   pointer-events:auto;
 }
